force-app/main/default/objects/Product_Table__c/fields/Units_Available__c.field-meta.xml
<CustomField>
    <fullName>Units_Available__c</fullName>
    <label>Units Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>