force-app/main/default/objects/Product_Table__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Products Table</relationshipLabel>
    <relationshipName>Products_Table</relationshipName>
    <type>Lookup</type>
</CustomField>