force-app/main/default/objects/Product_Table__c/validationRules/Unit_Price_not_less_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_not_less_zero</fullName>
    <active>true</active>
    <description>Don&#39;t create a record where Unit Price less zero.</description>
    <errorConditionFormula>Unit_Price__c  &lt;=  0</errorConditionFormula>
    <errorMessage>Unit Price can&#39;t be less zero!</errorMessage>
</ValidationRule>